Added README.md with setup instructions

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,7 @@
-pandas
-openpyxl
-numpy
+#pandas
+#openpyxl
+#numpy
+# ======================================================
+# NETWORKING / HTTP
+# ======================================================
+requests
